@@ -1,6 +1,7 @@
 dpkg (1.17.0) UNRELEASED; urgency=low
 
-  *
+  * Switch update-alternatives back to a fatal error on out of range priority
+    on --install.
 
  -- Guillem Jover <guillem@debian.org>  Fri, 03 Aug 2012 13:21:00 +0200
 
